--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/cli-plugin-babel": "4.1.1",
+    "diacritics": "^1.3.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11"
   },
