--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@vue/cli-plugin-babel": "4.1.1",
+    "bootstrap": "4.5.3",
     "diacritics": "^1.3.0",
+    "jquery": "3.5.1",
     "moment": "^2.29.1",
+    "popper.js": "1.16.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
