--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@vue/cli-plugin-babel": "4.1.1",
     "diacritics": "^1.3.0",
     "moment": "^2.29.1",
+    "node-sass": "5.0.0",
+    "sass-loader": "10.1.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
